Cập nhật: -- Tạo bảng mới để lưu lại dữ liệu thống kê theo ngày -- Thực hiện truy vấn từ bảng khác rồi lưu vào bảng thống kê

--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -252,7 +252,30 @@
                     <!-- /input-group -->
                 </li>
                 <li>
-                    <a href="/Admin/Home/Index"><i class="fa fa-dashboard fa-fw"></i> Trang chủ</a>
+                    <a href="/Admin/Home/Index"><i class="glyphicon glyphicon-home"></i> Trang chủ</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-dashboard fa-fw"></i> Thống kê<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li>
+                            <a href="/Admin/Home/Index/GetDataDailyList">Biểu đồ thống kê</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="glyphicon glyphicon-th-list"></i> Danh sách thống kê<span class="fa arrow"></span></a>
+                            <ul class="nav nav-third-level">
+                                <li>
+                                    <a href="/Admin/Statistic/TicketIndex">Doanh số bán vé</a>
+                                </li>
+                                <li>
+                                    <a href="#">Tip của KTV</a>
+                                </li>
+                                <li>
+                                    <a href="#">Doanh số bán vé</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <!-- /.nav-second-level -->
                 </li>
                 <li>
                     <a href="#"><i class="glyphicon glyphicon-list-alt"></i> Hệ thống<span class="fa arrow"></span></a>
@@ -274,6 +297,9 @@
                         </li>
                         <li>
                             <a href="/Admin/Room"> Danh sách Phòng</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/Department">Chi nhánh</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
