--- a/WebApp/Areas/Admin/Views/Home/GetDataDailyList.cshtml
+++ b/WebApp/Areas/Admin/Views/Home/GetDataDailyList.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
 @section header{
-    This is Index of Admin.
+    Biểu đồ thống kê
 }
 
 @section JsFooter{
@@ -55,39 +55,104 @@
         });
     </script>
     <script>
-        var sove = @Html.Raw(Json.Encode(ViewBag.SO));
-        var ve = @Html.Raw(Json.Encode(ViewBag.VE));
-        var tongtien = @Html.Raw(Json.Encode(ViewBag.TONGTIEN));
-
-        var ctx = document.getElementById('mixedChart').getContext('2d');
-        var mixedChart = new Chart(ctx, {
-            type: 'bar',
+new Chart(document.getElementById("line-chart"), {
+  type: 'line',
+  data: {
+    labels: [1500,1600,1700,1750,1800,1850,1900,1950,1999,2050],
+    datasets: [{
+        data: [86,114,106,106,107,111,133,221,783,2478],
+        label: "Africa",
+        borderColor: "#3e95cd",
+        fill: false
+      }, {
+        data: [282,350,411,502,635,809,947,1402,3700,5267],
+        label: "Asia",
+        borderColor: "#8e5ea2",
+        fill: false
+      }, {
+        data: [168,170,178,190,203,276,408,547,675,734],
+        label: "Europe",
+        borderColor: "#3cba9f",
+        fill: false
+      }, {
+        data: [40,20,10,16,24,38,74,167,508,784],
+        label: "Latin America",
+        borderColor: "#e8c3b9",
+        fill: false
+      }, {
+        data: [6,3,2,2,7,26,82,172,312,433],
+        label: "North America",
+        borderColor: "#c45850",
+        fill: false
+      }
+    ]
+  },
+  options: {
+    title: {
+      display: true,
+      text: 'World population per region (in millions)'
+    }
+  }
+});    
+    </script>
+    <script>
+        new Chart(document.getElementById("pie-chart"), {
+            type: 'pie',
             data: {
+                labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
                 datasets: [{
-                    label: "#",
-                    data: sove,
-                    // this dataset is drawn below
-                    order: 1
-                }, {
-                    label: '#',
-                    data: tongtien,
-                    type: 'line',
-                    // this dataset is drawn on top
-                    order: 2
-                }],
-                labels: ve
+                    label: "Population (millions)",
+                    backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850"],
+                    data: [2478, 5267, 734, 784, 433]
+                }]
             },
-            options: options
+            options: {
+                title: {
+                    display: true,
+                    text: 'Predicted world population (millions) in 2050'
+                }
+            }
         });
     </script>
-
+    <script>
+        new Chart(document.getElementById("bar-chart-grouped"), {
+            type: 'bar',
+            data: {
+                labels: ["1900", "1950", "1999", "2050"],
+                datasets: [
+                    {
+                        label: "Africa",
+                        backgroundColor: "#3e95cd",
+                        data: [133, 221, 783, 2478]
+                    }, {
+                        label: "Europe",
+                        backgroundColor: "#8e5ea2",
+                        data: [408, 547, 675, 734]
+                    }
+                ]
+            },
+            options: {
+                title: {
+                    display: true,
+                    text: 'Population growth (millions)'
+                }
+            }
+        });
+    </script>
 }
 <div class="row">
-    <div class="col-xs-6 col-sm-4">
-        <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="col-md-6">
+        <canvas id="line-chart" width="800" height="450"></canvas>
     </div>
-    <div class="col-xs-6 col-sm-4">
-        <canvas id="mixedChart" width="400" height="400"></canvas>
+    <div class="col-md-6">
+        <canvas id="pie-chart" width="800" height="450"></canvas>
     </div>
+    <div class="col-md-6">
+        <canvas id="bar-chart-grouped" width="800" height="450"></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="myChart" width="800" height="450"></canvas>
+    </div>
+    
 </div>
 
