--- a/WebApp/Areas/Admin/Views/Login/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Login/Index.cshtml
@@ -39,7 +39,7 @@
                             <img src="~/Areas/Admin/Data/System/logo.png" />
                         </div>
                         <div class="panel-heading">
-                            <h3 class="panel-title">Đăng nhập</h3>
+                            <h3 class="panel-title text-center">Đăng nhập</h3>
                         </div>
                         <div class="panel-body">
                             @using (Html.BeginForm("Login", "Login", FormMethod.Post))
